# retail-recommender-system

./: .dockerignore  .env.backup  .env.example  .env.redis_labs  .env.secrets  .env.secrets.example  .env.test  .gitignore  4.6.0  =1.0.9  =12.0.0  ASYNC_MIGRATION_REPORT.md  CACHE_OPTIMIZATION_GUIDE.md  COMPLETE_MIGRATION_MANUAL.md  Dockerfile  Dockerfile.cached  Dockerfile.complete  Dockerfile.debug  Dockerfile.distributed  Dockerfile.final  Dockerfile.fixed  Dockerfile.grpc_server  Dockerfile.optimized  Dockerfile.progressive  Dockerfile.retail  Dockerfile.simple_recommender  Dockerfile.simplified  Dockerfile.stable  Dockerfile.stage1  Dockerfile.stage2  Dockerfile.stage2_fixed  Dockerfile.tfidf  Dockerfile.tfidf.shopify  Dockerfile.tfidf.shopify.improved  Dockerfile.user_rec_fix  EMERGENCY_HOTFIX_MANUAL.md  ENTERPRISE_FACTORY_IMPLEMENTATION_REPORT.md  FASE1_EMERGENCY_HOTFIX_COMPLETED.md  MIGRATION_GUIDE_ENTERPRISE_REDIS.md  README.md  (+361 more)
backup_market_utils_20250721_175717/: src_api_utils_market_utils.py
backup_mcp_fixes_20250701_092657/: factories.py  main_unified_redis.py  mcp_aware_hybrid.py
backup_pre_balanced_optimization_20250802_023646/: mcp_router.py  mcp_router_conservative_enhancement.py
backup_redis_architecture_20250808_013758/: inventory_service.py  products_router.py  redis_connection_pool.py
data/: tfidf_model.pkl
diagnostic_scripts/: diagnose_redis_timeout.py
docs/: ANALISIS_VALIDACION_14102025.md  ARQUITECTURA_UNIFICADA.md  BASELINE_METRICS_15102025.md  CRITICAL_EVALUATION_FACTORY_PATTERN_SPRAWL.md  ESTADO_ACTUAL_Y_PROXIMOS_PASOS_14102025.md  (+26 more)
(+574 files in other folders)
