[tool.poetry]
name = "retail-recommender"
version = "0.1.0"
description = "Sistema de recomendaciones híbrido para retail"
authors = ["Retail Team <team@retail-recommender.com>"]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.package]
include = ["src/**/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
python-dotenv = "^1.0.0"
numpy = "1.23.5"
pandas = "1.5.3"
scikit-learn = "1.2.2"
# sentence-transformers = "2.2.2"
# torch = "^2.0.0"
redis = "^4.6.0"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
google-cloud-retail = "^1.25.0"
google-cloud-storage = "^2.19.0"
shopify-python-api = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.0.0"
isort = "^5.12.0"
mypy = "^1.8.0"

[tool.poetry.group.runtime]
optional = true

[tool.poetry.group.runtime.dependencies]
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.10.0"
numpy = "1.23.5"
scikit-learn = "1.2.2"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
